<resources>
    <string name="app_name">LuckyV Streamer List</string>
    <string name="app_description">abc</string>
    <string name="players_online">online:</string>
    <string name="online_players_number">${players_online}</string>
    <string name="suchbegriff">Suchbegriff</string>
    <string name="streamers_live">Streamers live</string>
    <string name="streamers_offline">Streamers offline</string>

    <string name="platzhalter">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="filtern_button">Filtern</string>
</resources>